--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-    compile files("libs/library-0.1.jar")
+    compile project(':launch.it')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
